# fastapi_template_app

./: .gitignore  README.md  alembic.ini  pyproject.toml
app/core/: crud.py  settings.py
app/db/: base.py  session.py
app/users/: crud.py  models.py  schemas.py  utils.py
migrations/: env.py
migrations/versions/: 2024_04_04_1004-7cb53dbd7158_initial_db_commit.py  2024_04_04_1818-4e5889faa020_create_users_table.py
